<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/repo_item_list_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/repo_name" />

    <TextView
        android:id="@+id/repo_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:text="@string/repo_id" />

    <TextView
        android:id="@+id/repo_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/repo_stars" />

    <TextView
        android:id="@+id/repo_stars_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>